# blockmalloc

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh
.github/workflows/: libblock_malloc.yml
cmake/: BlockMallocConfig.cmake.in  BlockmallocConfig.cmake.in  packagex.cmake
debian/: changelog  control  copyright  libblock-malloc2-dev.install  libblock-malloc2.install  libblockmalloc1.install  libblockmalloc2-dev.install
include/: block_malloc.h
include/block_malloc/: block_malloc.h  spinlock.h
include/blockmalloc/: blockmalloc.h  spinlock.h
src/: block_malloc.c  blockmalloc.c  logutil.h  spinlock.c  spinlock.h
test/: 1_block_simpletest.c  2_block_mallocmax.c  CMakeLists.txt  blocks.c  test_block.c  test_block_alloc.c
